# my-datacamp

./: .pdm-python  README.md  pyproject.toml  requirements.txt
Associate Data Scientist/Practical Exam/: notebook.ipynb  notebook_submitted.ipynb
Machine Learning with Tree-Based Models in Python/Chapter 1: Classification And regression Tree (CART)/: notebook.ipynb
Projects/What's in an Avocado Toast: A Supply Chain Analysis/: notebook.ipynb
