[project]
name = "my-datacamp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Antony Nyagah", email = "tony.m.nyagah@gmail.com"},
]
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "jupyterlab>=4.3.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
